# apis-instance-coladay-prod

./: .gitignore  README.md  manage.py  pyproject.toml
apis/: urls.py
apis/settings/: base.py  dev.py  server.py
browsing/templates/browsing/: generic_list.html
settings/: server.py
webpage/: views.py
webpage/templates/webpage/: 404-error.html  base.html  index.html
