[tool.poetry]
name = "apis-instance-coladay-prod"
version = "0.1.0"
description = "APIS Instance Coladay"
authors = ["Matthias Schlögl <matthias.schloegl@oeaw.ac.at>"]
license = "MIT"
packages = [
    { include = "browsing"},
    { include = "webpage"},
    { include = "settings" },
    { include = "apis"}
]


[tool.poetry.dependencies]
python = ">=3.11,<3.12"
mysqlclient = "^2.0.3"
apis-core = { git = "https://github.com/acdh-oeaw/apis-core.git", rev = "761e515c7b390f6431de29f22cf5fb7687bdcdb1" }
apis-bibsonomy = { git = "https://github.com/acdh-oeaw/apis-bibsonomy.git", rev = "affb0a68ef766a853ca665afcb55fd4f9f0fbc2a"}
apis-highlighter = { git = "https://github.com/acdh-oeaw/apis_highlighter.git", rev = "b5b8407ca7a60eeaa054733ae8e9b53b106ef95a" }
sentry-sdk = "^1.29.2"
dj-database-url = "^0.5.0"
django-allow-cidr = "^0.6.0"
django-csp = "^3.7"
whitenoise = "^5.2.0"
apis-override-select2js = { git="https://github.com/acdh-oeaw/apis-override-select2js", tag="v0.1.0" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
